; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/scripts/extr_common.c_executeCommand.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/scripts/extr_common.c_executeCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@PGRES_COMMAND_OK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [17 x i8] c"query failed: %s\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"query was: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @executeCommand(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %11)
  br label %13

13:                                               ; preds = %10, %3
  %14 = load i32*, i32** %4, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i32* @PQexec(i32* %14, i8* %15)
  store i32* %16, i32** %7, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %13
  %20 = load i32*, i32** %7, align 8
  %21 = call i64 @PQresultStatus(i32* %20)
  %22 = load i64, i64* @PGRES_COMMAND_OK, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %33

24:                                               ; preds = %19, %13
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @PQerrorMessage(i32* %25)
  %27 = call i32 @pg_log_error(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 %26)
  %28 = load i8*, i8** %5, align 8
  %29 = call i32 @pg_log_info(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i8* %28)
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @PQfinish(i32* %30)
  %32 = call i32 @exit(i32 1) #3
  unreachable

33:                                               ; preds = %19
  %34 = load i32*, i32** %7, align 8
  %35 = call i32 @PQclear(i32* %34)
  ret void
}

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32* @PQexec(i32*, i8*) #1

declare dso_local i64 @PQresultStatus(i32*) #1

declare dso_local i32 @pg_log_error(i8*, i32) #1

declare dso_local i32 @PQerrorMessage(i32*) #1

declare dso_local i32 @pg_log_info(i8*, i8*) #1

declare dso_local i32 @PQfinish(i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @PQclear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
